--- a/slides/03.html
+++ b/slides/03.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>CT5121: Advanced Topics in Natural Language Processing - Transformers</title>
+		<title>CT5121: Advanced Topics in Natural Language Processing - Transformers II</title>
 
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/moon.css">
@@ -26,7 +26,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-                            <section data-markdown="02_transformers.md">
+                            <section data-markdown="03_transformers_2.md">
                             </section>
 			</div>
 		</div>
