Update image size

--- a/slides/10.html
+++ b/slides/10.html
@@ -13,7 +13,7 @@
                 .reveal h1 {
                     font-size: 2em;
                 }
-                img[alt="Meme 2"] {
+                img[alt="Emotional Faces"] {
                     width: 60%;
                 }
                 </style>
